product-factory-composer/docker-compose/proxy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/graphql"
                route:
                  cluster: service2
              - match:
                  prefix: "/admin"
                route:
                  cluster: service2
              - match:
                  prefix: "/static"
                route:
                  cluster: service2
              - match:
                  prefix: "/images"
                route:
                  cluster: service2
              - match:
                  prefix: "/summernote"
                route:
                  cluster: service2
              - match:
                  prefix: "/oidc-callback"
                route:
                  cluster: service2
              - match:
                  prefix: "/oidc-logout-callback"
                route:
                  cluster: service2
              - match:
                  prefix: "/"
                route:
                  cluster: service1
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: service1
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frontend
                port_value: 3000
  - name: service2
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service2
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: backend
                  port_value: 8000
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
